# relic

./: .gitignore  Cargo.toml  README.md  package.sh
src/: config.rs  main.rs  utils.rs
src/components/: audio.rs  battery.rs  cpu.rs  datetime.rs  disk.rs  mod.rs  mpris.rs  ram.rs  system.rs  temperature.rs  wifi.rs
