[package]
name = "relic"
version = "0.1.0"
edition = "2024"
authors = ["Evan Alvarez <lwq7e50ygv8f1w@tuta.com>"]
description = "Hyper-minimal slstatus-like program following the suckless philosophy"
readme = "README.md"
license = "GPLv3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
cargo-zigbuild = "0.22.0"
libc = { version = "0.2.182", optional = true }
time = { version = "0.3.47", features = ["formatting", "local-offset"], optional = true }
tokio = { version = "1.49.0", features = ["full"] }

[features]
# Edit the "default" features below to set which components you want to enable
default = ["datetime", "wifi_custom", "battery_custom", "cpu_perc", "ram_perc", "temperature_f", "pipewire_icon"]

datetime = ["dep:time"]

wifi_essid = ["dep:libc"]
wifi_perc = []
wifi_custom = ["dep:libc"]

battery_perc = []
battery_state = []
battery_custom = []

cpu_perc = []

ram_free = []
ram_perc = []
ram_total = []
ram_used = []

swap_free = []
swap_perc = []
swap_total = []
swap_used = []

disk_free = ["dep:libc"]
disk_perc = ["dep:libc"]
disk_total = ["dep:libc"]
disk_used = ["dep:libc"]

hostname = ["dep:libc"]
username = ["dep:libc"]
userathost = ["dep:libc"]
kernel = []
# NOTE: Currently, this option does not really work for XBPS and I don't have any other package managers implemented soooo...
updates = []

temperature_c = []
temperature_f = []

pipewire = []
pipewire_icon = []
